Useless import dropped